--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
