--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/node": "^3.2.0",
     "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "xlsx": "^0.18.5"
-
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
