--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "flashcard-word-trainer",
   "private": true,
@@ -23,6 +24,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "vite": "^5.3.1"
